k8s/base/keycloak.yaml
#
# Copyright (c) 2025 Metaform Systems, Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#      Metaform Systems, Inc. - initial API and implementation
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: edc-v
  labels:
    platform: edcv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        platform: edcv
        type: edcv-infra
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args:
            - "start-dev"
            - "--health-enabled=true"
            - "--import-realm"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9000
              name: health
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: edc-v
  labels:
    tier: infrastructure
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: edc-v
  labels:
    tier: infrastructure
spec:
  rules:
    - host: keycloak.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
