k8s/base/nats.yaml
#
# Copyright (c) 2025 Metaform Systems, Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#      Metaform Systems, Inc. - initial API and implementation
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: edc-v
  labels:
    app: nats
    platform: edcv
    type: edcv-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      name: nats
      labels:
        app: nats
        platform: edcv
        type: edcv-infra
    spec:
      containers:
        - name: nats
          image: nats:latest
          imagePullPolicy: IfNotPresent
          args:
            - "-js"
          ports:
            - containerPort: 4222
              protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: edc-v
spec:
  type: NodePort
  selector:
    app: nats
  ports:
    - name: nats
      port: 4222
      targetPort: 4222

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nats
  namespace: edc-v
spec:
  rules:
    - host: nats.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nats
                port:
                  number: 4222
